styles/calculator.css
@charset "UTF-8";

/* FONT IMPORT */
@import url('https://fonts.googleapis.com/css2?family=Allura&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');

/* RESET */
* {
    margin: 0;
    padding: 0;
    border: 0;
    outline: 0;
    box-sizing: border-box;
    text-decoration: none;
    user-select: none;
    appearance: none;
    font-family: 'Poppins', sans-serif;
}

/* VARIABLES */
:root {
    --white_default: #ffffff;
    --black_default: #000000;

    --buttons-operator: #FDA005;
    --buttons-utilities: #a5a5a59f;
    --buttons-number: #333333;

    --icons-background-color: #33333353;
    --icons-background-color-hover: #ffffff4c;

    --icons-border-color: #ffffff1f;

    --icons-theme-pink: #ff3fa2;
    --icons-theme-blue: #4da3ff;
    --icons-theme-purple: #9d4edd;
    --icons-theme-default: #575757;
}

/* BODY AREA */
body.light {
    --white_default: #000000;
    --black_default: #ffffff;
    --icons-background-color-hover: #302e2ec0;
}

body.pink {
    --buttons-utilities: #ff83bd;
    --buttons-number: #ff3fa2;
    --buttons-operator: #ce0566;
}

body.blue {
    --buttons-utilities: #74beff;
    --buttons-number: #469fff; 
    --buttons-operator: #0062cbfc;
}

body.purple {
    --buttons-utilities: #c57dff;
    --buttons-number: #9c24ff; 
    --buttons-operator: #6100b1;
}

html {
    font-size: 16px;
}

body {
    width: 100%;
    height: 80dvh;
    padding: 10px;

    background-color: var(--black_default);
    color: var(--white_default);

    transition: all .5s ease;
}

/* NAV AREA */
nav {
    display: flex;
    justify-content: space-between;
}

.clock,
.icon-status {
    font-size: clamp(0.65rem, 1.2vw, 0.95rem);
}

.phone-status {
    display: flex;
    justify-content: flex-end;
    align-items: center;
    gap: 5px;
}
/* END NAV AREA */

/* HEADER AREA */
header {
    display: flex;
    justify-content: space-between;
    padding-top: 8px;
}

/* icons area */
.icon {
    display: flex;
    justify-content: center;
    align-items: center;

    font-size: clamp(1rem, 2vw, 5rem);
    font-variation-settings:
        'FILL' 0,
        'wght' 200,
        'GRAD' 0,
        'opsz' 24;
}

.component {
    padding: clamp(5px, 0.8vw, 7px);
    border-radius: inherit;
    border: 1px solid var(--icons-border-color);

    background-color: var(--icons-background-color);
    backdrop-filter: blur(10px) saturate(160%), brightness(0.5);
    color: var(--white_default);

    transition: all .3s ease;
}

.component:is(:hover, :focus-visible) {
    background-color: var(--icons-background-color-hover);
    filter: brightness(1.5);
    transform: scale(1.2);
}

.svg-inline--fa {
    width: 15px;
    height: 15px;
}

header a {
    height: 40px;
    border-radius: 50%;
}
/* end icons area */

/* Themes color area */
.themes {
    border-radius: inherit;
    display: flex;
    flex-flow: row wrap;
    justify-content: center;
    gap: 5px;
}

.colors-themes-container {
    flex: 1 1 100%;
}

.colors-themes-items {
    display: flex;
    justify-content: space-evenly;
    gap: 5px;
}

.color-theme {
    border-radius: 50%;
    /* width: 1.5rem; */
    aspect-ratio: 1/1;
    padding: 9px;
}

#pink-theme {
    background-color: var(--icons-theme-pink);
}

#blue-theme {
    background-color: var(--icons-theme-blue);
}

#purple-theme {
    background-color: var(--icons-theme-purple);
}

#default-theme {
    background-color: var(--icons-theme-default);
}

#pink-theme,
#blue-theme,
#purple-theme,
#default-theme {
    transition: all .3s ease-in-out;
}

#pink-theme:is(:hover, :focus-visible),
#blue-theme:is(:hover, :focus-visible),
#purple-theme:is(:hover, :focus-visible),
#default-theme:is(:hover, :focus-visible) {
    transform: scale(1.3);
}
/* end themes area */
/* END HEADER AREA */

/* MAIN AREA */
main {
    width: 100%;
    height: 100%;

    color: var(--white_default);
}

/* result */
.result {
    display: flex;
    flex-flow: row wrap;
    justify-content: flex-end;
    align-items: flex-end;

    height: 98px;
    margin-top: 30px;

    font-size: 3rem;
    font-weight: lighter;
}

/* BUTTONS SECTION AREA */
.buttons {
    display: grid;
    grid-template: repeat(5, 37px)/repeat(4, 45px);
    place-items: center;
    place-content: center;
    row-gap: 16px;
    column-gap: 10px;
}

/* buttons */
.buttons-utilities {
    background-color: var(--buttons-utilities);
}

.buttons-operators {
    background-color: var(--buttons-operator);
}

.buttons-numbers {
    background-color: var(--buttons-number);
}

.buttons-utilities,
.buttons-operators,
.buttons-numbers {
    display: flex;
    justify-content: center;
    align-items: center;
    flex-flow: column nowrap;

    border-radius: 50%;
    border: 1px solid var(--icons-border-color);
    width: 48px;
    aspect-ratio: 1/1;

    backdrop-filter: blur(10px);

    font-weight: 500;
    transition: all .5s ease;
}

a {
    color: inherit;
    transition: all .2s ease-in-out;
}

a:is(:hover, :focus-visible) {
    filter: brightness(1.3);
    transform: scale(1.2);
}
/* END BUTTONS SECTION AREA */

